<resources>
    <string name="app_name">GuideMe</string>
    <!--Login Activity-->
    <string name="headerDescription">header</string>
    <string name="appName">Guide Me</string>
    <string name="login">Login</string>
    <string name="Circle1">Circle1</string>
    <string name="Circle2">Circle2</string>
    <string name="Circle3">Circle3</string>
    <string name="Circle4">Circle4</string>
    <string name="EMail">Email</string>
    <string name="Password">Password</string>
    <string name="ForgetPassword">Forget Password?</string>
    <string name="FacebookLogin">Login with Facebook</string>
    <string name="GoogleLogin">Login with Google</string>
    <string name="EMailHint">Enter your Email address</string>
    <string name="PasswordHint">Enter your Password</string>
    <string name="RegisterDesc">Register Hint</string>
    <!--SignUp Activity-->
    <string name="signUp">Sign Up</string>
    <string name="CircleTes">Circle toolbar</string>
    <string name="UserName">Name</string>
    <string name="UserNameHint">Enter your Name</string>
    <string name="ConfPassword">Confirm Password</string>
    <string name="ConfPasswordHint">Confirm Password</string>
    <string name="RegisterButton">Register</string>


    <string name="update">Update</string>
    <string name="infomail">MAIL PLACEHOLDER</string>
    <string name="updateinfo">Update info</string>
    <string name="incorrectmail">Please enter a correct mail</string>
    <string name="incorrectpw">Please enter a password</string>
    <string name="shortpw">Please enter a password with more than 6 chars</string>
    <string name="regDone">Registration done please go back and sign in!</string>
    <string name="alreadyReg">Mail already register, login instead</string>
    <string name="checkCredent">Check your login credentials</string>
    <string name="placeholder">placeholder</string>
    <string name="placeholdertxt">Lorem ipsum dolor sit amet, vim at sumo sanctus mnesarchum. Duis regione temporibus te mei. Zril interpretaris ne sed. Eos ei laboramus conceptam persequeris, ex ignota posidonium vel, tollit corpora scripserit cum ut.
</string>
    <string name="admob_app_id">ca-app-pub-9184185768056728~2778951634</string>
    <string name="admob_banner_id">ca-app-pub-9184185768056728/3090900681</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="home">home</string>
    <string name="home_description">Arduino devices list</string>
    <string name="about_description">Info about the application</string>
    <string name="about_text">Created by Ossama Akram , an Android Developer since 2017 \n this application was made under GUC University NETW Protocol as a course project \n this application is at alpha stage bugs and errors may occur \n use with caution \n https://ispammer.github.io/site/</string>
    <string name="share">Share</string>
    <string name="contact">Contact me</string>
    <string name="github">Github</string>
    <string name="register">Register</string>
    <string name="noaccount">Dont have an account ?</string>
    <string name="title_activity_maps">Map</string>

    <string name="OPEN_WEATHER_MAP_API_KEY">0e5e434a8f9778e596ff155231d12d9a</string>
    <string name="current_weather">Curr</string>
    <string name="weather_description">Description</string>
    <string name="temperature">Max</string>
    <string name="wind_speed">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="sea_level">Sea Lvl</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_explore">Explore</string>
    <string name="title_history">History</string>
</resources>
