<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="VectorDrawableCompat"
    tools:context="com.guideme.guideme.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bgHeader"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:contentDescription="@string/headerDescription"
        android:background="@drawable/header"/>


    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDesc"
        android:layout_alignStart="@+id/tvDesc"
        android:text="@string/appName"
        android:transitionName="login"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="45dp"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="17sp" />


    <ImageView
        android:contentDescription="@string/Circle1"
        android:id="@+id/circle1"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:transitionName="image"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-100dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/circlet" />

    <ImageView
        android:contentDescription="@string/Circle2"
        android:id="@+id/circle2"
        android:layout_width="182dp"
        android:layout_height="182dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-90dp"
        android:layout_marginBottom="-40dp"
        android:src="@drawable/circle" />

    <ImageView
        android:contentDescription="@string/Circle3"
        android:id="@+id/circle3"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-50dp"
        android:layout_marginBottom="-60dp"
        android:layout_toStartOf="@id/circle2"
        android:src="@drawable/circlet" />

    <ImageView
        android:contentDescription="@string/Circle2"
        android:id="@+id/circle4"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_below="@+id/bgHeader"
        android:layout_marginTop="-130dp"
        android:layout_marginEnd="-100dp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/circlet" />

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="35dp">

                    <TextView
                        android:id="@+id/tvEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:text="@string/EMail"
                        android:textColor="@color/colorRed"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:hint="@string/EMailHint"
                        android:id="@+id/etEMail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvEmail"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:drawableEnd="@drawable/ic_person"
                        android:drawablePadding="30dp"
                        android:inputType="text"
                        android:padding="10dp" />

                    <TextView
                        android:id="@+id/tvPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/etEMail"
                        android:layout_margin="15dp"
                        android:text="@string/Password"
                        android:textColor="@color/colorRed"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:hint="@string/PasswordHint"
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvPassword"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:drawableEnd="@drawable/ic_lock"
                        android:drawablePadding="30dp"
                        android:inputType="textPassword"
                        android:padding="10dp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:id="@+id/rl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:transitionName="circleTes"
                android:layout_alignTop="@+id/cv"
                android:layout_alignEnd="@+id/cv"
                android:layout_marginTop="-20dp"
                android:layout_marginEnd="-20dp"
                android:elevation="10dp">

                <ImageButton
                    android:contentDescription="@string/RegisterDesc"
                    android:id="@+id/btRegister"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/circle"
                    android:src="@drawable/ic_add" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/cv"
                android:layout_alignEnd="@+id/cv"
                android:layout_alignBottom="@+id/cv"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:layout_marginBottom="-20dp"
                android:elevation="10dp">

                <Button
                    android:id="@+id/btLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@drawable/bt_uisquare"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite" />
            </RelativeLayout>


            <TextView
                android:id="@+id/tvForgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cv"
                android:layout_centerHorizontal="true"
                android:layout_margin="15dp"
                android:text="@string/ForgetPassword"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btGoogle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bt_uiborder"
                android:drawableStart="@drawable/google"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_below="@+id/tvForgot"
                android:layout_marginStart="90dp"
                android:textColor="@color/colorRed" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/btFacebook"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/logofacebook"
                android:drawableStart="@drawable/logofacebook"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_below="@+id/tvForgot"
                android:layout_marginStart="30dp"
                android:text="@string/FacebookLogin"
                android:textColor="@color/colorRed" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>